fix: Fix appearance of dark mode switcher on mobile

--- a/assets/scss/_dark_mode.scss
+++ b/assets/scss/_dark_mode.scss
@@ -44,18 +44,6 @@
         }
     }
 
-    @include bootstrap.media-breakpoint-down('sm') {
-        #dark-mode-switcher {
-            color: rgba(255, 255, 255, 0.55);
-            border-color: rgba(255, 255, 255, 0.1);
-
-            &:hover {
-                color: rgba(255, 255, 255, 0.55);
-                background: transparent;
-            }
-        }
-    }
-
     a,
     h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1,
     p,
